--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "devDependencies": {
     "buffer": "^6.0.3",
     "parcel": "^2.10.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.39",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.4"
   },
   "dependencies": {
     "axios": "^1.7.2",
