--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.23.1"
   },
   "browserslist": [
