--- a/package.json
+++ b/package.json
@@ -15,14 +15,22 @@
   "author": "Surya-08",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@testing-library/react": "^16.2.0",
+    "babel-jest": "^29.7.0",
     "buffer": "^6.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.10.3",
     "postcss": "^8.4.39",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.26.3",
     "@reduxjs/toolkit": "^2.6.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
